diseño responsive casi terminado para mobiles y pc