@@ -35,7 +35,13 @@ public class SecurityConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5175", "http://localhost:5173"));
+
+        configuration.setAllowedOrigins(Arrays.asList(
+                "http://localhost:5175",
+                "http://localhost:5173",
+                "http://192.168.1.69:5175",
+                "http://192.168.1.69:5173"
+        ));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("*"));
         configuration.setAllowCredentials(true);
